update css and html

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org:">
 	<head>
 		<title>Create New Post </title>
+		<link rel="stylesheet" th:href="@{/css/create.css}">
 	</head>	
 		<body>
 			<h2>Create New Blog Post</h2>
