--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head><title>Blog</title></head>
+	<head>
+		<title>Blog</title>
+		<link rel="stylesheet" th:href="@{/css/blog.css}">
+	</head>
 	<body>
 		<h2>Blog Posts</h2>
 		<a href="/new">Create New Post</a>
