--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Edit Blog Post</title>
+	<link rel="stylesheet" th:href="@{/css/edit.css}">
 </head>
 <body>
     <h2>Edit Blog Post</h2>
